commented out an console.log call

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -180,7 +180,7 @@ function return_image_info (id) {
            basename: pageObj.basefile
 	  },
     success: function (pos) {
-           console.log(pos);
+//           console.log(pos);
        }
   });
  }
