Added legend to screen

--- a/web/tmpl/GenomeView.tmpl
+++ b/web/tmpl/GenomeView.tmpl
@@ -1,4 +1,4 @@
-
+	
     <style type="text/css">
         #map {
             width: ;
@@ -510,4 +510,7 @@ Window Width: <input type=textbox class=backbox size=4 id="width" onkeypress="on
 <div id='query_popup' class="dialog_box" title="Features:"></div></div>
 <div id="genome_info_popup" class="dialog_box" title="Genome Information"><span class=loading>Loading. . .</span></div>
 
+<span class="legend ui-button ui-state-default ui-corner-all" onclick="$('.legend').toggle()">Show Legend</span>
+<span class="legend ui-button ui-state-default ui-corner-all" style="display:none" onclick="$('.legend').toggle()">Hide Legend</span>
+<div class="legend" style="display:none"><img height=50% width=50% src="/CoGe/picts/GenomeView-legend.png"><br><span class="link" onclick="window.open('/wiki/index.php?title=GenomeView')">More information?</span><div>
 
