--- a/web/tmpl/FeatView.tmpl
+++ b/web/tmpl/FeatView.tmpl
@@ -55,7 +55,8 @@ function search_chain(val) {
 }
 
 function go_cogesearch () {
- cogesearch(['args__accn','accn', 'args__anno','annosearch','args__type','type', 'args__org_id','org_id', 'args__feat_name_wild','feat_name_wild', 'args__feat_anno_wild', 'feat_anno_wild','args__org_name','org_name','args__org_desc','org_desc'],[source_search_chain]);
+// cogesearch(['args__accn','accn', 'args__anno','annosearch','args__type','type', 'args__org_id','org_id', 'args__feat_name_wild','feat_name_wild', 'args__feat_anno_wild', 'feat_anno_wild','args__org_name','org_name','args__org_desc','org_desc'],[source_search_chain]);
+ cogesearch(['args__accn','accn', 'args__anno','annosearch','args__type','type', 'args__org_id','org_id', 'args__org_name','org_name','args__org_desc','org_desc'],[source_search_chain]);
 }
 
 function source_search_chain (val) {
@@ -274,26 +275,26 @@ function search_bar(div_id){
            Name:
          <tD>
           <input type="text" name="accn" id="accn" tabindex="1"  size="10" value="<TMPL_VAR NAME=ACCN>" onkeypress="onEnter(event);"/>
-	Add wildcard to <select id="feat_name_wild" >
+<!--	Add wildcard to <select id="feat_name_wild" >
 	<option>neither</option>
 	<option>left</option>
 	<option>right</option>
 	<option>both</option>
  	</select>
-	side(s) of the name.
+	side(s) of the name.-->
        <TR>
          <TD nowrap>
           Annotation:
          <tD nowrap>
           <input type="text" name="annosearch" id="annosearch" tabindex="1"  size="10" value="<TMPL_VAR NAME=ANNO>" onkeypress="onEnter(event);"/>
-	Add wildcard to <select id="feat_anno_wild" >
+<!--	Add wildcard to <select id="feat_anno_wild" >
 	<option>neither</option>
 	<option>left</option>
 	<option>right</option>
 	<option selected>both</option>
  	</select>
 	side(s) of the annotation.
-	<tr><td><td><span class=small>Note: wildcards may slow search substantially</span>
+	<tr><td><td><span class=small>Note: wildcards may slow search substantially</span>-->
         <TR>
 	 <tD nowrap>
           Type:
