change layer legend colors

--- a/web/tmpl/GenomeView.tmpl
+++ b/web/tmpl/GenomeView.tmpl
@@ -31,7 +31,7 @@
         }
         #gc {
             background-color: white;
-             color:green;
+             color:blue;
 	}
         #cg {
             background-color: green;
