added a template_if control statement to allow the legend to be shown by a url parameter 'sl=1'

--- a/web/tmpl/GenomeView.tmpl
+++ b/web/tmpl/GenomeView.tmpl
@@ -444,7 +444,7 @@ $(document).ready(function(){
   init();
   change_gene_model_type();
   $(".dialog_box").dialog({ autoOpen: false, width: 500  });
-
+  <TMPL_IF NAME="SHOW_LEGEND">$('.legend').toggle()</TMPL_IF>
 
 });
 
