updated maizegdb conrtol

--- a/web/tmpl/GenomeView.tmpl
+++ b/web/tmpl/GenomeView.tmpl
@@ -524,7 +524,7 @@ Window Width: <input type=textbox class=backbox size=4 id="width" onkeypress="on
 <span class="legend ui-button ui-state-default ui-corner-all" style="display:none" onclick="$('.legend').toggle()">Hide Legend</span>
  <div class="legend" style="display:none">
  <TMPL_IF NAME="MAIZEGDB"> 
- <span class="ui-button ui-state-default ui-corner-all" onclick="$('#maizegdb_popup').dialog('open')">Maize Researcher Information</span>
+ <span class="ui-button ui-state-default ui-corner-all" onclick="$('#maizegdb_popup').dialog('open')">Maize Researcher Information</span><br>
  </TMPL_IF>
  <img width=600px src="/CoGe/picts/GenomeView-legend.png">
   <br>
