updated legend for GEvo links to auto appear when GEvo links are detected

--- a/web/tmpl/GenomeView.tmpl
+++ b/web/tmpl/GenomeView.tmpl
@@ -528,7 +528,7 @@ Window Width: <input type=textbox class=backbox size=4 id="width" onkeypress="on
  </TMPL_IF>
  <img width=600px src="/CoGe/picts/GenomeView-legend.png">
   <br>
- <TMPL_IF NAME="MAIZEGDB">
+ <TMPL_IF NAME="GEVO_LINK_LAYER">
   <img width=600px src="/CoGe/picts/GenomeView_GEvo-links.png">
   <br>
   <span class=small>GenomeView showing glyphs for links to GEvo. These glyphs are blue "links" and are displayed when a genomic feature has a link to GEvo for syntenic analysis of syntelogs.</span>
