update text for the maizegdb dialog box

--- a/web/tmpl/GenomeView.tmpl
+++ b/web/tmpl/GenomeView.tmpl
@@ -516,6 +516,7 @@ Window Width: <input type=textbox class=backbox size=4 id="width" onkeypress="on
 <div id='query_popup' class="dialog_box" title="Features:"></div></div>
 <div id="genome_info_popup" class="dialog_box" title="Genome Information"></div>
 <div id="maizegdb_popup" class="dialog_box" title="Welcome Maize Genome Researcher">
+   You can identify maize genes with syntenic matches in sorghum by looking for GEvo link glyphs.  There is an example of what these look like in the legend below.
    <li>For more information on how MaizeGDB and CoGe work together: <span class="link" onclick=window.open('http://synteny.cnr.berkeley.edu/wiki/index.php/MaizeGDB_and_CoGe')>MaizeGDB-CoGe</span>
    <li>For more information on how Maize-Sorhgum comparative genomics using CoGe: <span class="link" onclick=window.open('http://synteny.cnr.berkeley.edu/wiki/index.php/Maize_Sorghum_Syntenic_dotplot')>Maize-Sorghum and CoGe</span>
 </div>
