changed name of Local Duplicates to Tandem Duplicates

--- a/web/tmpl/GenomeView.tmpl
+++ b/web/tmpl/GenomeView.tmpl
@@ -157,7 +157,7 @@
                  ,{'ds':ds,'dsg':dsg,  'gstid':gstid,'chr':chr,layers:"CDS,cbc50"}
                  ,{isBaseLayer:false}
              );
-            local_dup = new OpenLayers.Layer.Genomic( "<span id='gc'>Local Duplicates</span>" , server
+            local_dup = new OpenLayers.Layer.Genomic( "<span id='gc'>Tandem Duplicates</span>" , server
                  ,{'ds':ds,'dsg':dsg,  'gstid':gstid,'chr':chr,layers:"local_dup",}
                  ,{isBaseLayer:false}
              );
